--- a/freemarkertool-web/src/main/webapp/static/css/theme.css
+++ b/freemarkertool-web/src/main/webapp/static/css/theme.css
@@ -19,3 +19,42 @@
     /*width: 310px;*/
     border: solid 1px #c6c6c6;
    }
+
+#container {
+  background-color: red;
+  width: 99%;
+  margin: 0 auto;
+}
+
+#left {
+  float: left;
+  width: 200px;
+}
+
+#center {
+ margin-left: 200px;
+ margin-right: 200px;
+}
+
+#right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 200px;
+}
+
+.editor textarea {
+  width: 100%;
+  height: 15em;
+  border: none;
+  background-color: white;
+  color: black;
+}
+
+.editor input {
+  width: 100%;
+}
+
+.readonly textarea {
+
+}
