--- a/freemarkertool-web/src/main/webapp/static/css/theme.css
+++ b/freemarkertool-web/src/main/webapp/static/css/theme.css
@@ -10,20 +10,40 @@
 
  /* height and width details */
 .borderboxtop div, .borderboxtop, .borderboxbot div, .borderboxbot {
-	/*width: 100%;*/
 	height: 10px;
 	font-size: 1px;
 }
 .borderboxcontent  { margin: 0 10px; }
 .borderbox {
-    /*width: 310px;*/
     border: solid 1px #c6c6c6;
    }
 
-#container {
-  background-color: red;
-  width: 99%;
+#header {
+  width: 100%;
+  height: 90px;  /* 100px inc padding */
+  padding:5px;
+}
+
+#footer {
+  width: 100%;
+  height: 20px;
+}
+
+#title {
+  float: left;
+}
+
+#adContainer {
+  position: relative;
   margin: 0 auto;
+  width: 728px;
+  height: 90px;
+  background-color: #cccccc;
+}
+
+#content {
+  font-family:Verdana,arial,sans-serif;
+  font-size:11px;
 }
 
 #left {
@@ -41,6 +61,12 @@
   top: 10px;
   right: 10px;
   width: 300px;
+}
+
+.block h2 {
+  padding: 0px;
+  margin: 0px;
+  font-size: 12px;
 }
 
 #right table,
