--- a/freemarkertool-web/src/main/webapp/static/css/theme.css
+++ b/freemarkertool-web/src/main/webapp/static/css/theme.css
@@ -3,10 +3,15 @@
 
 /* set background images for corners */
 .borderbox         { background-color: white; position:relative; z-index:0; }
-.borderboxtop div  { background: url(../images/border_grey_tl.gif) no-repeat top left; position: relative; left: -2px; top: 0px; z-index:1;}
-.borderboxtop      { background: url(../images/border_grey_tr.gif) no-repeat top right; position: relative; left: 1px; top: -1px; z-index:1;}
-.borderboxbot div  { background: url(../images/border_grey_bl.gif) no-repeat bottom left; position: relative; left: -2px; bottom: 0px; z-index:1; }
-.borderboxbot      { background: url(../images/border_grey_br.gif) no-repeat bottom right; position: relative; left: 1px; bottom: -1px; z-index:1; }
+.borderboxtop div  { background: url(../images/border_wo_tl.gif) no-repeat top left; position: relative; left: -2px; top: 0px; z-index:1;}
+.borderboxtop      { background: url(../images/border_wo_tr.gif) no-repeat top right; position: relative; left: 1px; top: -1px; z-index:1;}
+.borderboxbot div  { background: url(../images/border_wo_bl.gif) no-repeat bottom left; position: relative; left: -2px; bottom: 0px; z-index:1; }
+.borderboxbot      { background: url(../images/border_wo_br.gif) no-repeat bottom right; position: relative; left: 1px; bottom: -1px; z-index:1; }
+
+/*.borderboxtop div  { background: url(../images/sprites.gif) no-repeat -240px -120px; position: relative; left: -2px; top: 0px; z-index:1;}*/
+/*.borderboxtop      { background: url(../images/sprites.gif) no-repeat -318px -120px; position: relative; left: 1px; top: -1px; z-index:1;}*/
+/*.borderboxbot div  { background: url(../images/sprites.gif) no-repeat -240px -200px; position: relative; left: -2px; bottom: 0px; z-index:1; }*/
+/*.borderboxbot      { background: url(../images/sprites.gif) no-repeat -318px -200px; position: relative; left: 1px; bottom: -1px; z-index:1; }*/
 
  /* height and width details */
 .borderboxtop div, .borderboxtop, .borderboxbot div, .borderboxbot {
@@ -21,7 +26,7 @@
 #header {
   width: 100%;
   height: 90px;  /* 100px inc padding */
-  padding:5px;
+  padding:3px 5px 7px 5px;
 }
 
 #footer {
@@ -48,11 +53,55 @@
 
 #left {
   float: left;
-  width: 100px;
+  width: 60px;
+  margin-top:14px;
+}
+
+#left button {
+  width: 50px;
+}
+
+#left .yui-button {
+  margin-bottom: 5px;
+}
+
+.yui-skin-sam .yui-button {
+  background:transparent url(../images/gradients.gif) repeat-x scroll -100px;
+  border-color:#c6c6c6;
+}
+.yui-skin-sam .yui-button .first-child {
+  border-color:#c6c6c6;
+}
+
+.yui-skin-sam .yui-button-hover {
+  background-position:0pt 0px;
+  border-color:#c6c6c6;
+}
+
+.yui-skin-sam .yui-button-focus {
+  background-position:0pt -200px;
+}
+
+.yui-skin-sam .yui-button-active {
+  background-position:0pt -200px;
+}
+
+.yui-skin-sam .yui-radio-button-checked, .yui-skin-sam .yui-checkbox-button-checked {
+  background-position:0pt -200px;
+  border-color:#c6c6c6;
+}
+
+.yui-skin-sam .yui-radio-button-checked .first-child, .yui-skin-sam .yui-checkbox-button-checked .first-child {
+  border-color:#c6c6c6;
+}
+
+.yui-skin-sam .yui-radio-button-checked button,
+.yui-skin-sam .yui-checkbox-button-checked button {
+  color:#000000;
 }
 
 #center {
- margin-left: 110px;
+ margin-left: 70px;
  margin-right: 310px;
 }
 
@@ -75,41 +124,55 @@
   margin: 0;
   padding: 0;
   text-align: center;
+  vertical-align: middle;
 }
 
 #right tr.disabled {
-  background-color: #cccccc;
+  background-color: #eeeeee;
 }
 
 #right tr.enabled {
-  background-color: #ccffcc;
 }
 
+#right td {
+  border: 1px solid #cccccc;
+}
+
+#right input {
+ border: none;
+}
 
 #right input.name {
-  width: 85px;
+  width: 100%;
+  /*background-color: #ffffe8;*/
 }
 
 #right input.value {
-  width: 85px;
+  width: 100%;
+  /*background-color: #ffffe8; */
 }
 
 #right input.disabled {
-  background-color: #cccccc;
+  background-color: #eeeeee;
+}
+
+.editor {
+  /*background-color: #ffffe8;*/
 }
 
 .editor textarea {
   width: 100%;
   height: 15em;
   border: none;
-  background-color: white;
-  color: black;
+  background-color: transparent;
 }
 
 .editor input {
   width: 100%;
+  border: none;
+  background-color: transparent;
 }
 
-.readonly textarea {
-
+.readonly {
+  background-color: transparent;
 }
