--- a/freemarkertool-web/src/main/webapp/static/css/theme.css
+++ b/freemarkertool-web/src/main/webapp/static/css/theme.css
@@ -32,6 +32,13 @@
 #footer {
   width: 100%;
   height: 20px;
+  font-family:Verdana,arial,sans-serif;
+  font-size:9px;
+  text-align:right;
+}
+
+#footer a {
+  padding-top:2px;
 }
 
 #title {
@@ -114,7 +121,7 @@
 
 .block h2 {
   padding: 0px;
-  margin: 0px;
+  margin: 0 0 3px 0;
   font-size: 12px;
 }
 
