--- a/freemarkertool-web/src/main/www/static/css/theme.css
+++ b/freemarkertool-web/src/main/www/static/css/theme.css
@@ -25,8 +25,8 @@
 
 #header {
   width: 100%;
-  height: 90px;  /* 100px inc padding */
-  padding:3px 5px 7px 5px;
+  height: 90px;  /* 100px inc margin */
+  margin:3px 5px 7px 5px;
 }
 
 #footer {
@@ -147,8 +147,7 @@ select {
 }
 
 #center {
- margin-left: 70px;
- margin-right: 310px;
+ margin: 0 310px 0 70px; 
 }
 
 #right {
@@ -268,6 +267,7 @@ select {
   border: none;
   background-color: transparent;
   color: #000000;
+  overflow:auto;
 }
 
 .small textarea {
@@ -275,10 +275,17 @@ select {
 }
 
 .editor input {
-  width: 100%;
+  width: 100%;  /* won't work with IE */
   border: none;
   background-color: transparent;
 }
+
+
+#bodyText {
+  /* Makes it possible to focus on the textarea in IE without hitting the scrollbars */
+  *float: left;
+}
+
 
 .readonly {
   background-color: transparent;
