Added field errors to checkbox example

--- a/freemarkertool-web/src/main/www/static/css/theme.css
+++ b/freemarkertool-web/src/main/www/static/css/theme.css
@@ -161,6 +161,10 @@ select {
   margin-top: 0px;
 }
 
+#settings div.drop {
+  margin-bottom: 2px;
+}
+
 #settings label {
   display: block;
   float: left;
